--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "add": "^2.0.6",
-    "axios": "^0.21.1",
-    "date-fns": "^2.23.0",
-    "dayjs": "^1.10.6",
     "framer-motion": "^4.1.17",
-    "lodash": "^4.17.21",
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -24,12 +20,13 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "swr": "^1.0.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.11",
     "yup": "^0.32.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "SET PORT=5000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
