--- a/package.json
+++ b/package.json
@@ -10,17 +10,29 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.9.1",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "add": "^2.0.6",
+    "axios": "^0.21.4",
+    "date-fns": "^2.23.0",
+    "easy-peasy": "^5.0.3",
     "framer-motion": "^4.1.17",
     "qs": "^6.10.1",
     "react": "^17.0.2",
+    "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-to-print": "^2.13.0",
+    "serve": "^12.0.1",
     "swr": "^1.0.0",
+    "typescript": "^4.4.2",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.11",
     "yup": "^0.32.9"
