--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "eslint:recommended",
-      "plugin:react/recommended"
+      "react-app/jest"
     ]
   },
   "browserslist": {
